--- a/projects/csm-main-menu/src/lib/csm-main-menu.component.html
+++ b/projects/csm-main-menu/src/lib/csm-main-menu.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <csm-side-bar [metadata]="metadata" (onChange)="onOptionChange($event)"></csm-side-bar>
+  <csm-side-bar [metadata]="metadata" (changeOption)="onOptionChange($event)"></csm-side-bar>
   <main>
     <csm-menu-render [option]="option"></csm-menu-render>
     <ng-content></ng-content>
