--- a/projects/csm-main-menu/src/lib/csm-main-menu.component.html
+++ b/projects/csm-main-menu/src/lib/csm-main-menu.component.html
@@ -1,6 +1,6 @@
 <div class="app-container">
-  <csm-side-bar [metadata]="metadata" (changeOption)="onOptionChange($event)"></csm-side-bar>
-  <main>
+  <csm-side-bar class="sidebar" [metadata]="metadata" (changeOption)="onOptionChange($event)"></csm-side-bar>
+  <main class="content">
     <csm-menu-render [option]="option"></csm-menu-render>
     <ng-content></ng-content>
   </main>
