--- a/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.scss
+++ b/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.scss
@@ -1,5 +1,9 @@
 @import '../../../assets/styles/style';
 
+:host {
+  margin: 0px;
+}
+
 .menu-render {
   position: absolute;
   width: 0vw;
@@ -13,8 +17,8 @@
   border: 1px solid $menu-render-list-border-color;
 
   &.is-open {
-    width: calc(100vw - #{$menu-render-sidebar-width});
-    padding: 15px 50px;
+    width: $menu-render-sidebar-width;
+    padding: #{$menu-render-y-padding} #{$menu-render-x-padding};
 
     .search-input {
       visibility: visible;
@@ -22,25 +26,24 @@
   }
 
   .search-input {
-    margin-bottom: 30px;
-    margin-left: -30px;
     position: relative;
     min-width: $menu-render-search-min-width;
     max-width: $menu-render-search-max-width;
-    width: 30%;
+    width: 100%;
     visibility: hidden;
 
     .search {
       border: 2px solid $border-gray;
       color: $menu-render-list-color;
       width: 100%;
-      font-size: 0.8rem;
-      padding: 5px 40px 5px 5px;
+      font-size: 1rem;
+      padding: 5px 30px 5px 5px;
     }
 
     i {
       position: absolute;
-      right: -30px;
+
+      right: 10px;
       top: 6px;
     }
   }
@@ -48,18 +51,20 @@
   .menu-content {
     max-height: 100%;
     max-width: 100%;
-    min-width: calc(100vw - #{$menu-render-sidebar-width});
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(#{$menu-render-list-item-width}, 1fr));
+    grid-row-gap: 40px;
+    grid-column-gap: 30px;
     overflow-y: scroll;
-    grid-row-gap: $menu-render-y-padding;
-    grid-column-gap: $menu-render-x-padding;
     overflow-x: hidden;
+    margin-top: 40px;
 
     .menu-item {
       display: block;
       overflow: hidden;
       width: 100%;
+      padding-left: 10px;
+      width: inherit;
 
       h2 {
         color: $menu-render-list-title-color;
@@ -68,6 +73,26 @@
         margin-bottom: 5px;
         text-overflow: ellipsis;
         white-space: nowrap;
+        overflow: hidden;
+        width: 100%;
+        cursor: default;
+
+        &:after {
+          display:block;
+          border-bottom: solid 3px $menu-render-list-color;  
+          transform: scaleX(0);  
+          transition: transform 250ms ease-in-out;
+          content: '';
+        }
+      }
+
+      &:hover {
+        h2 {
+          &:after {
+            transform: scaleX(1);
+            transform-origin: 0% 50%;
+          }
+        }
       }
 
       .menu-item-countries {
