--- a/projects/csm-main-menu/src/components/side-bar/csm-side-bar.component.scss
+++ b/projects/csm-main-menu/src/components/side-bar/csm-side-bar.component.scss
@@ -11,6 +11,7 @@ nav {
   min-height: 100vh;
   background-color: $sidebar-bg-color;
   font-family: Roboto, Helvetica, sans-serif;
+  box-shadow: 5px 0 10px 0 rgba(0,0,0,.1);
 
   .logo {
     background-image: $sidebar-logo;
@@ -31,7 +32,6 @@ nav {
 
     li {
       height: $sidebar-link-size;
-      width: calc(100% - 30px);
       display: flex;
       align-items: center;
       justify-content: flex-start;
