--- a/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.scss
+++ b/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.scss
@@ -7,6 +7,7 @@
 
 .menu-render {
   position: absolute;
+  z-index: 1049;
   width: 0vw;
   height: 100vh;
   background-color: $menu-render-list-bg-color;
