Updating Version Number

--- a/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.html
+++ b/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.html
@@ -15,7 +15,7 @@
       <h2>{{ item.label }}</h2>
       <div class="menu-item-countries">
         <a
-          href="#"
+          routerLink="/view/{{ item.route }}"
           class="menu-item-country"
           *ngFor="let view of item.views"
           (click)="onViewClick(view)"
