--- a/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.html
+++ b/projects/csm-main-menu/src/components/menu-render/csm-menu-render.component.html
@@ -15,10 +15,10 @@
       <h2>{{ item.label }}</h2>
       <div class="menu-item-countries">
         <a
-          [routerLink]="item.route"
           class="menu-item-country"
           *ngFor="let view of item.views"
           (click)="onViewClick(view)"
+          [routerLink]="view.route"
         >
           <i [class]="view.country"></i>
           <span>{{ view.country }}</span>
