--- a/projects/csm-main-menu/assets/styles/_variables.scss
+++ b/projects/csm-main-menu/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 $path-to-assets: '/projects/csm-main-menu/assets';
+$flags-sprite-url: url('../../../assets/images/flags-sprites.png') no-repeat;
 
 // SideBar Variables
 $sidebar-width: 250px;
